# server

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: deploy.yml  docker.yml  rust.yml
db/diesel/: db.sqlite
migrations/2023-03-08-063108_recreate-plans/: down.sql  up.sql
src/: diesel_sqlite.rs  main.rs  plan.rs  schema.rs  tests.rs
