[package]
name = "databases"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
chrono = { version = "0.4.23", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool", "sqlite_pool"]
